@@ -32,9 +32,11 @@ setenv LINEDELIM      "\n"
 setenv SEQMARKER_DEBUG  false
 
 # biotype conflict equivalency mappings
-setenv NCBI_EQUIV	"null:all feature types,unknown:all feature types,other:all feature types,miscRNA:non-coding RNA gene or its children,protein-coding:protein coding gene|polymorphic pseudogene,pseudo:pseudogene|pseudogenic gene segment|polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,scRNA:scRNA gene,tRNA:tRNA gene"
+setenv NCBI_EQUIV	"null:all feature types,unknown:all feature types,other:all feature types,miscRNA:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,protein-coding:protein coding gene|polymorphic pseudogene,pseudo:pseudogene|pseudogenic gene segment|polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,scRNA:scRNA gene,tRNA:tRNA gene,ncRNA:unclassified gene|unclassified non-coding RNA gene"
 
-setenv ENSEMBL_EQUIV	"IG_C_gene:gene segment,IG_D_gene:gene segment,IG_J_gene:gene segment,IG_V_gene:gene segment,miRNA:miRNA gene,misc_RNA:non-coding RNA gene or its children,processed_transcript:unclassified gene|unclassified non-coding RNA gene|lincRNA gene,protein_coding:protein coding gene,pseudogene:pseudogenic region|pseudogene|pseudogenic gene segment,polymorphic_pseudogene:polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,lincRNA:lincRNA gene|unclassified non-coding RNA gene|unclassified gene,Mt_tRNA:tRNA gene,Mt_rRNA:rRNA gene,3prime_overlapping_ncrna:unclassified non-coding RNA gene|unclassified gene,antisense:unclassified non-coding RNA gene|unclassified gene,ncrna_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,non_coding:unclassified non-coding RNA gene|unclassified gene,sense_intronic:unclassified non-coding RNA gene|unclassified gene,sense_overlapping:unclassified non-coding RNA gene|unclassified gene"
+setenv ENSEMBL_EQUIV1	"IG_C_gene:gene segment,IG_D_gene:gene segment,IG_J_gene:gene segment,IG_V_gene:gene segment,miRNA:miRNA gene,misc_RNA:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,processed_transcript:unclassified gene|unclassified non-coding RNA gene|lincRNA gene,protein_coding:protein coding gene,pseudogene:pseudogenic region|pseudogene|pseudogenic gene segment,polymorphic_pseudogene:polymorphic pseudogene,rRNA:rRNA gene,snoRNA:snoRNA gene,snRNA:snRNA gene,lincRNA:lincRNA gene|unclassified non-coding RNA gene|unclassified gene,Mt_tRNA:tRNA gene,Mt_rRNA:rRNA gene,3prime_overlapping_ncrna:unclassified non-coding RNA gene|unclassified gene,antisense:unclassified non-coding RNA gene|unclassified gene,ncrna_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene"
+
+setenv ENSEMBL_EQUIV2	"non_coding:unclassified non-coding RNA gene|unclassified gene,sense_intronic:unclassified non-coding RNA gene|unclassified gene,sense_overlapping:unclassified non-coding RNA gene|unclassified gene,retrotransposed:pseudogenic region|pseudogene|pseudogenic gene segment,TR_V_gene:gene segment"
 
 # The vega string is too long now, so split into multi variables
 setenv VEGA_EQUIV1	"protein_coding:protein coding gene,KNOWN_protein_coding:protein coding gene,NOVEL_protein_coding:protein coding gene,PUTATIVE_protein_coding:protein coding gene,_polymorphic:protein coding gene,KNOWN_polymorphic:protein coding gene,NOVEL_polymorphic:protein coding gene,PUTATIVE_polymorphic:protein coding gene,_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,KNOWN_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,NOVEL_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,PUTATIVE_processed_transcript:unclassified non-coding RNA gene|unclassified gene|lincRNA gene,_non_coding:unclassified non-coding RNA gene|unclassified gene,KNOWN_non_coding:unclassified non-coding RNA gene|unclassified gene,NOVEL_non_coding:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_non_coding:unclassified non-coding RNA gene|unclassified gene"
@@ -43,11 +45,12 @@ setenv VEGA_EQUIV2	"_3prime_overlapping_ncrna:unclassified non-coding RNA gene|u
 
 setenv VEGA_EQUIV3	"KNOWN_lincRNA:lincRNA gene|unclassified non-coding RNA gene|unclassified gene,NOVEL_lincRNA:lincRNA gene|unclassified non-coding RNA gene|unclassified gene,PUTATIVE_lincRNA:lincRNA gene|unclassified non-coding RNA gene|unclassified gene,_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,KNOWN_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,NOVEL_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,PUTATIVE_ncRNA_host:unclassified gene|non-coding RNA gene or its children|lincRNA gene,_retained_intron:protein coding gene|unclassified gene,KNOWN_retained_intron:protein coding gene|unclassified gene,NOVEL_retained_intron:protein coding gene|unclassified gene,PUTATIVE_retained_intron:protein coding gene|unclassified gene"
 
-setenv VEGA_EQUIV4	"_sense_intronic:unclassified non-coding RNA gene|unclassified gene,KNOWN_sense_intronic:unclassified non-coding RNA gene|unclassified gene,NOVEL_sense_intronic:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_sense_intronic:unclassified non-coding RNA gene|unclassified gene,_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,KNOWN_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,NOVEL_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,_IG_gene:gene segment,KNOWN_IG_gene:gene segment,NOVEL_IG_gene:gene segment,PUTATIVE_IG_gene:gene segment,_TR_gene:gene segment,KNOWN_TR_gene:gene segment,NOVEL_TR_gene:gene segment,PUTATIVE_TR_gene:gene segment,TEC:all feature types,_pseudogene:pseudogene,KNOWN_pseudogene:pseudogene"
+setenv VEGA_EQUIV4	"_sense_intronic:unclassified non-coding RNA gene|unclassified gene,KNOWN_sense_intronic:unclassified non-coding RNA gene|unclassified gene,NOVEL_sense_intronic:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_sense_intronic:unclassified non-coding RNA gene|unclassified gene,_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,KNOWN_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,NOVEL_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,PUTATIVE_sense_overlapping:unclassified non-coding RNA gene|unclassified gene,_IG_gene:gene segment,KNOWN_IG_gene:gene segment,NOVEL_IG_gene:gene segment,PUTATIVE_IG_gene:gene segment,_TR_gene:gene segment,KNOWN_TR_gene:gene segment,NOVEL_TR_gene:gene segment,PUTATIVE_TR_gene:gene segment,_pseudogene:pseudogene,KNOWN_pseudogene:pseudogene"
 
-setenv VEGA_EQUIV5	"NOVEL_pseudogene:pseudogene,PUTATIVE_pseudogene:pseudogene,_unprocessed_pseudogene:pseudogene,KNOWN_unprocessed_pseudogene:pseudogene,NOVEL_unprocessed_pseudogene:pseudogene,PUTATIVE_unprocessed_pseudogene:pseudogene,_processed_pseudogene:pseudogene,KNOWN_processed_pseudogene:pseudogene,NOVEL_processed_pseudogene:pseudogene,PUTATIVE_processed_pseudogene:pseudogene,_transcribed_processed_pseudogene:pseudogene,KNOWN_transcribed_processed_pseudogene:pseudogene,NOVEL_transcribed_processed_pseudogene:pseudogene,PUTATIVE_transcribed_processed_pseudogene:pseudogene,_transcribed_unprocessed_pseudogene:pseudogene,KNOWN_transcribed_unprocessed_pseudogene:pseudogene,NOVEL_transcribed_unprocessed_pseudogene:pseudogene"
+setenv VEGA_EQUIV5	"NOVEL_pseudogene:pseudogene,PUTATIVE_pseudogene:pseudogene,_unprocessed_pseudogene:pseudogene,KNOWN_unprocessed_pseudogene:pseudogene,NOVEL_unprocessed_pseudogene:pseudogene,PUTATIVE_unprocessed_pseudogene:pseudogene,_processed_pseudogene:pseudogene,KNOWN_processed_pseudogene:pseudogene,NOVEL_processed_pseudogene:pseudogene,PUTATIVE_processed_pseudogene:pseudogene,_transcribed_processed_pseudogene:pseudogene,KNOWN_transcribed_processed_pseudogene:pseudogene,NOVEL_transcribed_processed_pseudogene:pseudogene,PUTATIVE_transcribed_processed_pseudogene:pseudogene,_transcribed_unprocessed_pseudogene:pseudogene,KNOWN_transcribed_unprocessed_pseudogene:pseudogene,NOVEL_transcribed_unprocessed_pseudogene:pseudogene,TEC:all feature types,_TEC:all feature types,KNOWN_TEC:all feature types,NOVEL_TEC:all feature types,PUTATIVE_TEC:all feature types"
 
-setenv VEGA_EQUIV6	"PUTATIVE_transcribed_unprocessed_pseudogene:pseudogene,_transcribed_unitary_pseudogene:pseudogene,KNOWN_transcribed_unitary_pseudogene:pseudogene,NOVEL_transcribed_unitary_pseudogene:pseudogene,_unitary_pseudogene:pseudogene,KNOWN_unitary_pseudogene:pseudogene,NOVEL_unitary_pseudogene:pseudogene,PUTATIVE_unitary_pseudogene:pseudogene,PUTATIVE_transcribed_unitary_pseudogene:pseudogene,_polymorphic_pseudogene	polymorphic:pseudogene,KNOWN_polymorphic_pseudogene:polymorphic pseudogene,NOVEL_polymorphic_pseudogene:polymorphic pseudogene,PUTATIVE_polymorphic_pseudogene:polymorphic pseudogene,_IG_pseudogene:pseudogenic gene segment,KNOWN_IG_pseudogene:pseudogenic gene segment,NOVEL_IG_pseudogene:pseudogenic gene segment,PUTATIVE_IG_pseudogene:pseudogenic gene segment" 
+setenv VEGA_EQUIV6	"PUTATIVE_transcribed_unprocessed_pseudogene:pseudogene,_transcribed_unitary_pseudogene:pseudogene,KNOWN_transcribed_unitary_pseudogene:pseudogene,NOVEL_transcribed_unitary_pseudogene:pseudogene,_unitary_pseudogene:pseudogene,KNOWN_unitary_pseudogene:pseudogene,NOVEL_unitary_pseudogene:pseudogene,PUTATIVE_unitary_pseudogene:pseudogene,PUTATIVE_transcribed_unitary_pseudogene:pseudogene,_polymorphic_pseudogene	polymorphic:pseudogene,KNOWN_polymorphic_pseudogene:polymorphic pseudogene,NOVEL_polymorphic_pseudogene:polymorphic pseudogene,PUTATIVE_polymorphic_pseudogene:polymorphic pseudogene,_IG_pseudogene:pseudogenic gene segment,KNOWN_IG_pseudogene:pseudogenic gene segment,NOVEL_IG_pseudogene:pseudogenic gene segment,PUTATIVE_IG_pseudogene:pseudogenic gene segment"
+
 # equivalency term that indicates to map the associated raw term to
 # 'non-coding RNA gene' and all its children. This is applicable to all
 # providers. We do this in code rather than in config file because there is a
